--- a/.editorconfig
+++ b/.editorconfig
@@ -6,13 +6,9 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
-[*.go]
+[{*.go,Makefile}]
 indent_style = tab
-indent_size = 4
+indent_size = 8
 
 [*.toml]
 indent_size = 2
-
-[Makefile]
-indent_style = tab
-indent_size = 4
